[package]
name = "json_errors"
description = "Transforms popular crates' errors into JSON errors. Aimed to be used with Rocket."
license = "MIT"
version = "0.3.5"
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
repository = "https://github.com/Aeradriel/rs_json_errors.git"
edition = "2018"

[package.metadata.docs.rs]
features = ["diesel", "reqwest"]

[dependencies]
rocket = "0.4.1"
rocket_contrib = "0.4.1"
regex = "1.1.6"
serde = "1.0.91"
diesel = { version = "1.4.2", features = ["postgres","r2d2","uuid","chrono"], optional = true }
serde_json = "1.0.39"
serde_derive = "1.0.91"
reqwest = { version = "0.9.16", optional = true }
log = "0.4.6"
