[package]
name = "json_errors"
description = "Transforms popular crates' errors into JSON errors. Aimed to be used with Rocket."
license = "MIT"
version = "0.5.4"
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
repository = "https://github.com/Aeradriel/rs_json_errors.git"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rocket = "0.4.11"
rocket_contrib = "0.4.11"
regex = "1.6.0"
serde = "1.0.139"
diesel = { version = "1.4.8", features = ["postgres","r2d2","uuid","chrono"], optional = true }
serde_json = "1.0.82"
serde_derive = "1.0.139"
reqwest = { version = "0.11.11", optional = true }
log = "0.4.17"

[features]
stripe = ["reqwest"]